<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TRAC</string>
    <string name="title_section1">Live</string>
    <string name="title_section2">Summary</string>
    <string name="title_section3">Controls</string>
    <string name="action_settings">Settings</string>
    <string name="create_account">Create Account</string>
    <string name="action_addRunner">Add Athlete</string>    
    <string name="action_edit">Log Out</string>
    <string name="action_signout">Log Out</string>
    <string name="title_activity_group_view">GroupView</string>
    <string name="title_fragment_settings">SettingsView</string>
    <string name="title_rosterActivity">Roster</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="title_splash_screen">TRAC</string>
    <string name="title_activity_workout_view">WorkoutView</string>
    <string name="title_activity_calendar">Calendar</string>
	<string name="hello_world1">Hello world!</string>
	<string name="create_workout">Create Workout</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="action_reset">Reset Workout</string>
	<string name="action_search">Search</string>
	<string name="play">Calibrate Start (Sensor Control)</string>
	<string name="record">Start Race/Workout</string>
	<string name="action_stop">End Workout (Sensor Control)</string>
	<string name="calibrate_description">Calibrate date to today</string>
	<string name="start_description">GO! Gives all athletes single start time.</string>
	<string name="stop_description">Finalize results, accept no additional athletes</string>
	<string name="reset_description">Clear results of all athletes</string>
	<string name="logout_description">Return to login screen</string>
	<string name="download">Import Roster</string>
	<string name="download_description">Pull registered runners into workout</string>
	<string name="split">Split All</string>
	<string name="reset">Reset All</string>
	<string name="view_roster">View Roster</string>
	<string name="view_roster_description">See roster before importing</string>
	<string name="organization">Organization</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="confirm">Confirm Password</string>
	<string name="email">Email Address</string>
	<string name="title_activity_registration">Register</string>
	<string name="register">Register</string>
	<string name="cancel">Cancel</string>
	<string name="name">Name</string>
	<string name="tag">Tag ID</string>
	<string name="server_client_id">983021202491-kupk29qejvri4mlpd8ji0pa7r31bkrin.apps.googleusercontent.com</string>
	<string name="trac_client_id">Opu8FB7AgwyychaR79YQISvxC2nRKAohCnGdVJud</string>
	<string name="intro">Welcome to TRAC!</string>
	<string name="step_one">This is the calendar page. You can view all your previous and upcoming workouts here. \n\nCreate a new session by clicking on the overflow button.</string>
	<string name="step_two_title">Welcome to the workout page.</string>
	<string name="step_two">Here you can view splits and create them using the pencil button in the top right corner. \n\nA running timer can be viewed by holding an individuals name. \n\nBut now, let us set up a workout: \nClick on the controls tab. </string>
	<string name="step_three_title">This is the settings page. </string>
	<string name="step_three">Here you can calibrate start and stop times for a workout, and erase workout data.\nFor large race starts, use the start workout button. It gives all runners a single start time. \nLets look at our athletes: click on the roster button.</string>
	<string name="step_four_title">This is your roster: </string>
	<string name="step_four">To add an athlete not listed, click on the overflow icon. \n \nClick the pencil icon to register previously created runners to a session. \n\nGood luck and enjoy TRAC!</string>
	<string name="ok">OK</string>
	<string name="addTeam">Create Team</string>
	<string name="addWorkout">Create Workout</string>
</resources>
