<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:newtest="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.newtest.MainActivity" >

    <item android:id="@+id/action_searchroster"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:orderInCategory="100"
          newtest:showAsAction="always|collapseActionView"
          newtest:actionViewClass="android.support.v7.widget.SearchView"/>
    
  	<item android:id="@+id/action_edit"
          android:icon="@drawable/ic_action_edit"
          android:title="@string/action_edit"
          android:orderInCategory="100"
          newtest:showAsAction="collapseActionView|ifRoom"
         />
   <item
        android:id="@+id/action_addRunner"
        android:orderInCategory="100"
        android:title="@string/action_addRunner"
        newtest:showAsAction="never"
        />
   <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="@string/action_signout"
        newtest:showAsAction="never"
        />


</menu>
